# AIAGRV

./: .gitignore  CMakeLists.txt  README.md  json-converter.py  requirements.txt
M04_2021/data/input/: relacao_societario_tratada.csv
M04_2021/data/output/csv/: relatorio_2  relatorio_3
M04_2021/data/output/pickles/: cliques_picles
M04_2021/python/: calcula_competicao.py  limpa_arestas.py  modela_arestas.py  modela_grafos.py  rel1.py  rel2.py  rel3.py
sources/: output.json  prod_parsed.json
sources/data/resources/DB/: output.db
sources/data/resources/JSON/: prod_parsed.json
sources/data/src/: data_analisys.ipynb
sources/utils/resources/DB/: CREATE_DB.sql
sources/utils/src/: API.py  CMakeLists.txt  data_manager.py  data_parser.py  json_converter.py
sources/utils/src/CPP/: CMakeLists.txt  ICdataUtils.cc  ICdataUtils.hh  Makefile
sources/utils/src/CPP/shared/: .gitignore
